--- a/css/style.css
+++ b/css/style.css
@@ -1362,6 +1362,85 @@ textarea.input {
   background: url(../img/contact/003.png) left no-repeat;
 }
 
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  font-size: 0;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  display: none;
+  transition: all 0.3s ease 0s;
+}
+
+.modal.active {
+  display: flex;
+  font-size: 0;
+}
+
+.modal__content {
+  background-color: #fff;
+  z-index: 6;
+  text-align: center;
+  padding: 45px 65px;
+  max-width: 450px;
+  margin: 0 auto;
+}
+
+@media (max-width: 767px) {
+  .modal__content {
+    padding: 15px 25px;
+    max-width: 350px;
+  }
+}
+
+.modal__icon {
+  margin: 0px 0px 19px 0px;
+}
+
+.modal__title {
+  color: #3cd072;
+  font-size: 24px;
+  font-weight: 600;
+  margin: 0px 0px 35px 0px;
+}
+
+@media (max-width: 767px) {
+  .modal__title {
+    font-size: 20px;
+  }
+}
+
+.modal__text {
+  font-size: 16px;
+  font-weight: 600;
+  max-width: 320px;
+  line-height: 26px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 767px) {
+  .modal__text {
+    font-size: 14px;
+  }
+}
+
+.modal__btn {
+  width: 136px;
+  background-color: #3cd072;
+  color: #fff;
+}
+
+.modal__btn:hover {
+  background-color: #208645;
+}
+
 .footer {
   padding: 45px 0px;
 }
