--- a/sass/block/_content.sass
+++ b/sass/block/_content.sass
@@ -510,7 +510,58 @@
         &_3
             background: url(../img/contact/003.png) left no-repeat
 
+// ========================================================================
 
+// ========================================================================
+.modal
+    position: fixed
+    top: 0
+    left: 0
+    width: 100%
+    height: 100%
+    @include flexbox
+    align-items: center
+    justify-content: center
+    background-color: rgba(000, 000, 000, .5)
+    z-index: 5
+    display: none
+    transition: all 0.3s ease 0s
+    &.active
+        @include flexbox
+    &__content
+        background-color: #fff
+        z-index: 6
+        text-align: center
+        padding: 45px 65px
+        max-width: 450px
+        margin: 0 auto
+        @media (max-width: 767px)
+            padding: 15px 25px
+            max-width: 350px
+    &__icon
+        margin: 0px 0px 19px 0px
+    &__title
+        color: $main-color
+        font-size: 24px
+        font-weight: 600
+        margin: 0px 0px 35px 0px
+        @media (max-width: 767px)
+            font-size: 20px
+    &__text
+        font-size: 16px
+        font-weight: 600
+        max-width: 320px
+        line-height: 26px
+        margin: 0 auto
+        margin-bottom: 20px
+        @media (max-width: 767px)
+            font-size: 14px
+    &__btn
+        width: 136px
+        background-color: $main-color
+        color: #fff
+        &:hover
+            background-color: darken($main-color, 20%)
 
 // ========================================================================
 
